--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h2 class="text-4xl font-bold text-white text-center mb-12">Tentang Saya</h2>
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="w-full md:w-1/3">
-                    <img src="https://placehold.co/400x400/1e293b/94a3b8?text=Foto+Anda" alt="Foto Profil Gatot Sasangka" class="rounded-full shadow-2xl mx-auto border-4 border-slate-700">
+                    <img src="Sasangka.png" alt="Foto Profil Gatot Sasangka" class="rounded-full shadow-2xl mx-auto border-4 border-slate-700">
                 </div>
                 <div class="w-full md:w-2/3 text-lg text-slate-300">
                     <p class="mb-4">
