--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                 <p class="text-center text-slate-400 mt-12">
                     Untuk melihat lebih banyak proyek, silakan kunjungi 
                     <a href="https://github.com/AffineCipher-0" target="_blank" rel="noopener noreferrer" class="text-sky-400 hover:underline font-semibold">
-                        profil GitHub saya
-                    </a>.
+                        profil GitHub saya.
+                    </a>
                 </p>
             </div>
         </section>
