--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2 flex justify-center items-center">
-                    <img src="https://github.com/AffineCipher-0/Sasangka/blob/main/Sasangka.png?raw=true" alt="Foto Profil Gatot Sasangka" class="rounded-full shadow-2xl mx-auto w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-slate-800">
+                    <img src="https://imgur.com/QDBBrAN" alt="Foto Profil Gatot Sasangka" class="rounded-full shadow-2xl mx-auto w-64 h-64 md:w-80 md:h-80 object-cover border-4 border-slate-800">
                 </div>
             </div>
         </section>
@@ -559,4 +559,5 @@
     </script>
 </body>
 </html>
+
 
