--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
         #about, #certificates { background-color: #2B2E31; }
         #portfolio, #contact { background-color: #373A3E; }
         
-        #about img, #certificates .border {
+        #about img {
             border-color: #373A3E;
+        }
+        
+        #certificates .border {
+             border-color: rgba(255, 255, 255, 0.1);
         }
 
         /* Kartu Proyek & Sertifikat */
@@ -171,10 +175,10 @@
             <div class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2 text-center md:text-left">
                     <h2 class="text-3xl font-bold text-white mb-6" data-lang-key="aboutTitle">Tentang Saya</h2>
-                    <p class="text-gray-300 mb-4" data-lang-key="aboutP1">
+                    <p class="text-gray-300 mb-4 text-justify" data-lang-key="aboutP1">
                         Saya adalah lulusan S1 Teknik Informatika dari Universitas Amikom Yogyakarta dengan predikat Cumlaude (IPK 3.83). Saya memiliki hasrat mendalam untuk menerapkan keahlian teknis dalam mendukung digitalisasi dan efisiensi operasional di berbagai industri.
                     </p>
-                    <p class="text-gray-300" data-lang-key="aboutP2">
+                    <p class="text-gray-300 text-justify" data-lang-key="aboutP2">
                         Dengan fondasi yang kuat di bidang Jaringan (Cisco CCNA), pengembangan IoT, AI, dan manajemen database (SQL), saya telah berhasil merancang sistem monitoring jarak jauh dan mempublikasikan penelitian tentang mikrokontroler. Saya selalu antusias untuk belajar hal baru dan berkolaborasi dalam tim.
                     </p>
                     <h3 class="text-2xl font-bold text-white mt-8 mb-4" data-lang-key="skillsTitle">Keahlian Utama</h3>
@@ -208,7 +212,7 @@
                             <p class="text-gray-300 text-sm mb-4 flex-grow" data-lang-key="project1Desc">Merancang dan membangun alat penerjemah sandi morse berbasis mikrokontroler dengan algoritma Brute Force. Dipublikasikan di Jurnal INFOS.</p>
                             <div class="mt-auto">
                                 <a href="https://jurnal.amikom.ac.id/index.php/infos/article/view/965" target="_blank" class="highlight-link font-semibold inline-flex items-center text-sm" data-lang-key="viewDetail">
-                                    Lihat Detail <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
+                                    Lihat Detail <i data-lucide="external-link" class="w-4 h-4 ml-2"></i>
                                 </a>
                             </div>
                         </div>
@@ -220,7 +224,7 @@
                             <p class="text-gray-300 text-sm mb-4 flex-grow" data-lang-key="project2Desc">Membangun aplikasi e-commerce fungsional menggunakan PHP untuk backend dan CSS/JavaScript untuk frontend, lengkap dengan panel admin.</p>
                             <div class="mt-auto">
                                 <a href="https://github.com/AffineCipher-0/FinalProjectWeb-Secondhand" target="_blank" class="highlight-link font-semibold inline-flex items-center text-sm" data-lang-key="viewDetail">
-                                    Lihat Detail <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
+                                    Lihat Detail <i data-lucide="external-link" class="w-4 h-4 ml-2"></i>
                                 </a>
                             </div>
                         </div>
@@ -235,7 +239,7 @@
                                     Lihat Detail (SRS) <i data-lucide="file-text" class="w-4 h-4 ml-1"></i>
                                 </a>
                                 <a href="https://affinecipher-0.github.io/prototype-greenhouse/" target="_blank" class="prototype-link font-semibold inline-flex items-center text-sm" data-lang-key="viewPrototype">
-                                    Lihat Prototipe <i data-lucide="play-circle" class="w-4 h-4 ml-1"></i>
+                                    Lihat Prototipe <i data-lucide="mouse-pointer-2" class="w-4 h-4 ml-1"></i>
                                 </a>
                             </div>
                         </div>
@@ -551,6 +555,7 @@
         const initialLang = localStorage.getItem('language') || 'id';
         setLanguage(initialLang);
 
+        // --- Gemini AI Email Generator Logic ---
         const aiEmailBtn = document.getElementById('ai-email-btn');
         const aiEmailModal = document.getElementById('ai-email-modal');
         const aiEmailModalContent = document.getElementById('ai-email-modal-content');
