--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         /* Hero Section */
         #home {
-            background-image: url('https://i.imgur.com/xS3YdHM.jpeg'); 
+            background-image: url('https://i.imgur.com/CSGeTpb.gif'); 
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -671,3 +671,4 @@
     </script>
 </body>
 </html>
+
