--- a/index.html
+++ b/index.html
@@ -105,146 +105,32 @@
         .modal-button-secondary { background-color: #555; }
         .modal-button-secondary:hover { background-color: #666; }
 
-        /* --- CSS BARU DARI KODE ANIMASI ANDA --- */
-        #home {
-            background: linear-gradient(to top, #0a0a0a, #1a1a2e);
-            position: relative;
-            overflow: hidden;
-            perspective: 1000px;
-        }
-        #home::before {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background: repeating-linear-gradient(90deg, rgba(255,183,77,0.12) 0 2px, transparent 2px 100px),
-                        repeating-linear-gradient(0deg, rgba(100,181,246,0.12) 0 2px, transparent 2px 100px);
-            mix-blend-mode: overlay;
-            animation: circuitFlow 12s linear infinite, glowShift 14s ease-in-out infinite;
-            z-index: 1;
-        }
-        #home > div {
-             position: relative;
-             z-index: 2;
-        }
-        @keyframes circuitFlow {
-            from { background-position: 0 0, 0 0; }
-            to   { background-position: 200px 0, 0 200px; }
-        }
-        @keyframes glowShift {
-            0%   { filter: hue-rotate(0deg); opacity: 0.6; }
-            50%  { filter: hue-rotate(180deg); opacity: 1; }
-            100% { filter: hue-rotate(360deg); opacity: 0.6; }
-        }
-        .cityline {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 150px;
-            background: linear-gradient(to top, #0d47a1 10%, transparent 90%);
-            clip-path: polygon(
-                0% 100%, 0% 50%, 5% 50%, 5% 70%, 10% 70%, 10% 40%, 15% 40%, 15% 60%, 20% 60%, 20% 30%, 25% 30%, 25% 65%, 30% 65%, 30% 45%, 35% 45%, 35% 75%, 40% 75%, 40% 35%, 45% 35%, 45% 55%, 50% 55%, 50% 25%, 55% 25%, 55% 60%, 60% 60%, 60% 40%, 65% 40%, 65% 70%, 70% 70%, 70% 30%, 75% 30%, 75% 65%, 80% 65%, 80% 45%, 85% 45%, 85% 75%, 90% 75%, 90% 35%, 95% 35%, 95% 55%, 100% 55%, 100% 100%
-            );
-            animation: cityGlow 6s ease-in-out infinite alternate;
-            z-index: 1;
-        }
-        @keyframes cityGlow {
-            from { opacity: 0.5; filter: drop-shadow(0 0 6px #64b5f6); }
-            to   { opacity: 1; filter: drop-shadow(0 0 20px #ffcc80); }
-        }
-        .cloud {
-            position: absolute;
-            font-size: 1.8rem;
-            font-weight: 600;
-            padding: 12px 28px;
-            border-radius: 25px;
-            backdrop-filter: blur(6px);
-            background: rgba(255,255,255,0.2);
-            color: #263238;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-            animation: float 6s ease-in-out infinite;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            will-change: transform;
-            z-index: 2;
-        }
-        .cloud:hover {
-            transform: scale(1.1);
-            box-shadow: 0 12px 25px rgba(0,0,0,0.25);
-        }
-        .ai { top: 20%; left: 38%; background: #90caf9; color: #0d47a1; }
-        .iot { top: 20%; right: 28%; animation-delay: 2s; background: #ffcc80; color: #e65100; }
-        @media (max-width: 768px) {
-            .ai { left: 10%; }
-            .iot { right: 10%; }
-        }
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-12px); }
-        }
-        .code-box {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: rgba(33,33,33,0.8);
-            color: #ffcc80;
-            padding: 24px;
-            border-radius: 16px;
-            box-shadow: 0 0 30px rgba(255,183,77,0.6);
-            width: 420px;
-            max-width: 90%;
-            height: auto;
-            overflow: hidden;
-            white-space: nowrap;
-            font-size: 15px;
-            font-family: "Courier New", Courier, monospace;
-            animation: fadeIn 2s ease;
-            will-change: transform;
-            z-index: 2;
-            text-align: center;
-        }
-        .typing {
-            border-right: 2px solid #ffcc80;
-            animation: typing 8s steps(60, end) infinite alternate,
-                       blink 0.7s step-end infinite;
-            display: inline-block;
-        }
-        @keyframes typing {
-            from { width: 0; }
-            to { width: 100%; }
-        }
-        @keyframes blink {
-            50% { border-color: transparent; }
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translate(-50%, -60%); }
-            to { opacity: 1; transform: translate(-50%, -50%); }
-        }
-        .node {
-            position: absolute;
-            width: 24px;
-            height: 24px;
-            background: #64b5f6;
-            border-radius: 50%;
-            box-shadow: 0 0 20px rgba(100,181,246,0.8);
-            z-index: 2;
-        }
-        .overlay-text {
-            position: absolute;
-            top: 5%;
-            left: 5%;
-            background: rgba(0,0,0,0.5);
-            color: #fff;
-            padding: 12px 20px;
-            border-radius: 12px;
-            font-size: 1rem;
-            text-align: left;
-            font-style: italic;
-            box-shadow: 0 6px 15px rgba(0,0,0,0.3);
-            backdrop-filter: blur(4px);
-            animation: fadeIn 3s ease, float 8s ease-in-out infinite;
-            z-index: 2;
-        }
+        /* --- CSS UNTUK BAGIAN ATAS (HERO SECTION) DARI KODE PERTAMA --- */
+        #home { background: linear-gradient(to top, #0a0a0a, #1a1a2e); position: relative; overflow: hidden; }
+        #home::before { content: ""; position: absolute; inset: 0; background: repeating-linear-gradient(90deg, rgba(255,183,77,0.12) 0 2px, transparent 2px 100px), repeating-linear-gradient(0deg, rgba(100,181,246,0.12) 0 2px, transparent 2px 100px); mix-blend-mode: overlay; animation: circuitFlow 12s linear infinite, glowShift 14s ease-in-out infinite; z-index: 1; }
+        @keyframes circuitFlow { from { background-position: 0 0, 0 0; } to { background-position: 200px 0, 0 200px; } }
+        @keyframes glowShift { 0%{filter:hue-rotate(0deg);opacity:.6}50%{filter:hue-rotate(180deg);opacity:1}100%{filter:hue-rotate(360deg);opacity:.6} }
+        .hero-content { position: relative; z-index: 3; text-align: center; }
+        .hero-title { font-size: 2.5rem; font-weight: 800; background: linear-gradient(90deg, #90caf9, #ffcc80); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 1rem; }
+        .hero-subtitle { font-size: 1.2rem; color: #ffcc80; font-family: "Courier New", monospace; border-right: 2px solid #ffcc80; white-space: nowrap; overflow: hidden; display: inline-block; animation: typing 10s steps(60,end) infinite alternate, blink .7s step-end infinite; }
+        @keyframes typing { from{width:0} to{width:100%} }
+        @keyframes blink { 50%{border-color:transparent} }
+        .celestial { position: absolute; border-radius: 50%; display:flex; align-items:center; justify-content:center; font-weight:bold; z-index:2; color:#fff; font-size:0.9rem; letter-spacing:1px; background: radial-gradient(circle at top left, rgba(255,255,255,0.4), transparent 70%), radial-gradient(circle at bottom right, rgba(0,0,0,0.5), transparent 70%); backdrop-filter: blur(6px); border: 2px solid rgba(255,255,255,0.15); animation: pulse 6s ease-in-out infinite; }
+        .ai { top: 20%; left: 10%; width: 90px; height: 90px; background: radial-gradient(circle, #90caf9, #0d47a1); box-shadow:0 0 40px 12px rgba(144,202,249,0.6); animation: orbit 40s linear infinite; transform-origin: 200px 200px; }
+        .iot{ top: 22%; right: 10%; width: 110px; height: 110px; background: radial-gradient(circle, #ffcc80, #e65100); box-shadow:0 0 50px 18px rgba(255,204,128,0.7); animation: orbit 55s linear infinite reverse; transform-origin: -200px 150px; }
+        .cisco{ bottom: 20%; left: 15%; width: 90px; height: 90px; background: radial-gradient(circle, #1abc9c, #0e6655); box-shadow:0 0 35px 12px rgba(26,188,156,0.6); animation: orbit 50s linear infinite; transform-origin: 150px -150px; }
+        .office{ bottom: 30%; right: 12%; width: 85px; height: 85px; background: radial-gradient(circle, #d83b01, #922b21); box-shadow:0 0 35px 12px rgba(216,59,1,0.6); animation: orbit 60s linear infinite reverse; transform-origin: -180px -200px; }
+        .gworkspace{ top: 35%; left: 45%; width: 95px; height: 95px; background: radial-gradient(circle, #fbbc05, #b9770e); color:#000; box-shadow:0 0 35px 12px rgba(251,188,5,0.6); animation: orbit 65s linear infinite; transform-origin: 220px 100px; }
+        .sql{ bottom: 15%; right: 35%; width: 90px; height: 90px; background: radial-gradient(circle, #336791, #1a2c44); box-shadow:0 0 35px 12px rgba(51,103,145,0.6); animation: orbit 70s linear infinite reverse; transform-origin: -220px 120px; }
+        .micro{ top: 60%; left: 20%; width: 85px; height: 85px; background: radial-gradient(circle, #8e44ad, #4a235a); box-shadow:0 0 35px 12px rgba(142,68,173,0.6); animation: orbit 75s linear infinite; transform-origin: 250px -150px; }
+        .webprog{ top: 70%; right: 22%; width: 100px; height: 100px; background: radial-gradient(circle, #27ae60, #145a32); box-shadow:0 0 35px 12px rgba(39,174,96,0.6); animation: orbit 80s linear infinite reverse; transform-origin: -250px -180px; }
+        @keyframes orbit { from { transform: rotate(0deg) translateX(0); } to { transform: rotate(360deg) translateX(0); } }
+        @keyframes pulse { 0% { transform: scale(1); opacity:0.9;} 50% { transform: scale(1.1); opacity:1;} 100% { transform: scale(1); opacity:0.9;} }
+        .overlay-text { position:absolute; top:12%; left:5%; background:rgba(0,0,0,0.5); color:#fff; padding:10px 18px; border-radius:10px; font-size:.95rem; font-style:italic; backdrop-filter:blur(4px); z-index:2; max-width: 600px; white-space: normal; }
+        .node { position:absolute; width:20px; height:20px; background: radial-gradient(circle, #64b5f6, #0d47a1); border-radius:50%; box-shadow:0 0 25px rgba(100,181,246,.9); z-index:1; }
+        #home::after { content: ""; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: repeating-linear-gradient(to bottom, rgba(255,255,255,0.05) 0px, rgba(255,255,255,0.05) 2px, transparent 2px, transparent 4px); animation: flicker 0.15s infinite; z-index: 5; pointer-events: none; }
+        @keyframes flicker { 0% { opacity: 0.2; } 50% { opacity: 0.4; } 100% { opacity: 0.2; } }
+        
         .cv-name {
             margin-top: 6px;
             font-size: 0.9rem;
@@ -288,21 +174,24 @@
     </header>
 
     <main>
-        <section id="home" class="min-h-screen flex items-center justify-center text-center">
-            <div class="container mx-auto px-6 w-full h-full">
-                <div class="cloud ai">AI</div>
-                <div class="cloud iot">IoT</div>
-                <div class="code-box">
-                    <a href="#" class="text-xl font-bold text-white">Gatot Sasangka</a><br>
-                    <span class="typing" data-lang-key="heroTyping">Jaringan, IoT, dan Pengembangan Web.</span>
-                </div>
-                <div class="node"></div>
-                <div class="overlay-text">
-                    <span data-lang-key="heroOverlay">Annoying isn’t it? But those cables are truly connected and messy.</span>
-                    <span class="cv-name" data-lang-key="heroQuote">"We are all lost stars, trying to light up the dark." ✨</span>
-                </div>
-                <div class="cityline"></div>
+        <section id="home" class="min-h-screen flex items-center justify-center">
+            <div class="hero-content">
+                <h1 class="hero-title">Gatot Sasangka</h1>
+                <span class="hero-subtitle" data-lang-key="heroTyping">Lulusan Teknik Informatika dengan keahlian di bidang Jaringan, IoT, dan Pengembangan Web.</span>
             </div>
+            <div class="celestial ai">AI</div>
+            <div class="celestial iot">IoT</div>
+            <div class="celestial cisco">Cisco</div>
+            <div class="celestial office">Office</div>
+            <div class="celestial gworkspace">GWS</div>
+            <div class="celestial sql">SQL</div>
+            <div class="celestial micro">Micro</div>
+            <div class="celestial webprog">Web</div>
+            <div class="overlay-text">
+                 <span data-lang-key="heroOverlay">Annoying isn’t it? But those cables are truly connected and messy.</span><br>
+                 <span class="cv-name" data-lang-key="heroQuote">"We are all lost stars, trying to light up the dark." ✨</span>
+            </div>
+            <div class="node"></div>
         </section>
 
         <section id="about" class="py-20 pt-32">
@@ -616,48 +505,42 @@
     <script>
         lucide.createIcons();
 
+        // --- SCRIPT ANIMASI NODE DARI KODE PERTAMA ---
         const node = document.querySelector('.node');
         if (node) {
-            let x = 100, y = 100;
-            let vx = 3, vy = 2.5;
-            const radius = 24;
-            const gravity = 0.2;
-            const bounceFactor = 0.8;
+            let x=150, y=150;
+            let vx=3, vy=3;
+            const radius=20;
 
-            function animate() {
-                const width = window.innerWidth;
-                const height = document.getElementById('home').offsetHeight;
+            function animate(){
+                const w=window.innerWidth;
+                const h=document.getElementById('home').offsetHeight;
 
-                x += vx;
-                y += vy;
-                vy += gravity;
+                x+=vx;
+                y+=vy;
 
-                if (x + radius > width || x - radius < 0) {
-                    vx = -vx * bounceFactor;
-                    x = Math.max(radius, Math.min(x, width - radius));
+                if(x+radius>w||x-radius<0){
+                    vx=-vx;
+                    x=Math.max(radius,Math.min(x,w-radius));
+                }
+                if(y+radius>h||y-radius<0){
+                    vy=-vy;
+                    y=Math.max(radius,Math.min(y,h-radius));
                 }
 
-                if (y + radius > height) {
-                    vy = -vy * bounceFactor;
-                    y = height - radius;
-                }
-                if (y - radius < 0) {
-                    vy = -vy * bounceFactor;
-                    y = radius;
-                }
-
-                node.style.left = x + 'px';
-                node.style.top = y + 'px';
+                node.style.left=x+"px";
+                node.style.top=y+"px";
 
                 requestAnimationFrame(animate);
             }
             animate();
         }
 
+        // --- SISA SCRIPT DARI KODE KEDUA ---
         document.addEventListener("mousemove", (e) => {
             const moveX = (e.clientX / window.innerWidth - 0.5) * 20;
             const moveY = (e.clientY / window.innerHeight - 0.5) * 20;
-            document.querySelectorAll('#home .cloud, #home .code-box').forEach(el => {
+            document.querySelectorAll('#home .celestial, #home .hero-content').forEach(el => {
                 el.style.transform = `translate(${moveX}px, ${moveY}px)`;
             });
         });
@@ -675,7 +558,7 @@
                 navCertificates: "Sertifikat",
                 navContact: "Kontak",
                 navCV: "Unduh CV",
-                heroTyping: "Jaringan, IoT, dan Pengembangan Web.",
+                heroTyping: "Lulusan Teknik Informatika dengan keahlian di bidang Jaringan, IoT, dan Pengembangan Web.",
                 heroOverlay: "Annoying isn’t it? But those cables are truly connected and messy.",
                 heroQuote: `"We are all lost stars, trying to light up the dark." ✨`,
                 aboutTitle: "Tentang Saya",
@@ -716,7 +599,7 @@
                 navCertificates: "Certificates",
                 navContact: "Contact",
                 navCV: "Download CV",
-                heroTyping: "Networking, IoT, and Web Development.",
+                heroTyping: "An Informatics Engineering graduate with skills in Networking, IoT, and Web Development.",
                 heroOverlay: "Annoying isn’t it? But those cables are truly connected and messy.",
                 heroQuote: `"We are all lost stars, trying to light up the dark." ✨`,
                 aboutTitle: "About Me",
