--- a/index.html
+++ b/index.html
@@ -517,11 +517,11 @@
                 
                 <div class="ai-box mt-12 p-6 rounded-lg max-w-2xl mx-auto border">
                     <h3 class="font-bold text-white flex items-center justify-center gap-2" data-lang-key="aiTitle">
-                        <i data-lucide="sparkles" class="text-yellow-400"></i> Asisten AI untuk Perekrut
+                        <i data-lucide="sparkles" class="text-yellow-400"></i> Untuk Perekrut
                     </h3>
-                    <p class="text-sm text-gray-300 mt-2" data-lang-key="aiSubtitle">Ingin menghubungi saya? Biarkan AI membantu Anda membuat draf email profesional.</p>
+                    <p class="text-sm text-gray-300 mt-2" data-lang-key="aiSubtitle">Ingin menghubungi saya? draf email.</p>
                     <button id="ai-email-btn" class="modal-button-primary mt-4 text-white font-semibold px-6 py-2 rounded-lg transition-colors" data-lang-key="aiButton">
-                        Buat Draf Email dengan AI
+                        Buat Draf Email
                     </button>
                 </div>
             </div>
@@ -896,4 +896,5 @@
 
 </body>
 </html>
+
 
