--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     
     <script src="https://unpkg.com/lucide@latest"></script>
-    
+    <!-- FONT AWESOME CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
     <style>
         /* GAYA VISUAL TEMA COKLAT TUA */
         body {
@@ -485,18 +487,18 @@
                 <p class="text-gray-300 mt-4 max-w-xl mx-auto" data-lang-key="contactSubtitle">
                     Saya terbuka untuk diskusi, peluang kerja, atau sekadar bertukar pikiran.
                 </p>
-                <div class="mt-12 flex justify-center gap-8">
+                <div class="mt-12 flex justify-center gap-8 text-3xl">
                     <a href="#" id="email-link" class="social-icon text-gray-300 hover:text-[#B48A5C]" title="Email">
-                        <i data-lucide="mail" class="w-10 h-10"></i>
+                       <i class="fa-solid fa-envelope"></i>
                     </a>
                     <a href="https://wa.me/6287832165306" target="_blank" class="social-icon text-gray-300 hover:text-[#B48A5C]" title="Hubungi via WhatsApp">
-                        <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-10 h-10"><title>WhatsApp</title><path d="M17.472 14.382c-.297-.149-.88-.436-1.017-.487-.137-.05-.274-.074-.412.074-.137.148-.517.655-.634.782-.117.127-.234.149-.412.05-.177-.1-.747-.274-1.424-.867-.527-.453-.88-1.017-1.017-1.194-.137-.177-.024-.274.05-.374.074-.1.177-.248.274-.374.098-.127.149-.248.223-.423.074-.177.024-.325-.05-.423-.074-.098-.412-.99-.559-1.342-.148-.351-.297-.302-.412-.302-.117 0-.274 0-.412 0-.137 0-.374.05-.559.274-.186.223-.722.722-.722 1.753s.747 2.03.844 2.178c.098.149 1.445 2.203 3.507 3.088.495.223.88.351 1.181.449.302.098.58.074.799-.05.248-.126.88-.517 1.017-.99.137-.473.137-.88.098-1.017-.05-.137-.177-.223-.297-.274zM12.052 2c-5.454 0-9.891 4.437-9.891 9.891 0 1.748.453 3.496 1.342 4.957L2 22l5.254-1.548a9.866 9.866 0 0 0 4.798 1.228h.024c5.454 0 9.891-4.437 9.891-9.891S17.506 2 12.052 2z"/></svg>
+                       <i class="fab fa-whatsapp"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/sasangka/" target="_blank" class="social-icon text-gray-300 hover:text-[#B48A5C]" title="Lihat Profil LinkedIn">
-                        <i data-lucide="linkedin" class="w-10 h-10"></i>
+                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="https://github.com/AffineCipher-0" target="_blank" class="social-icon text-gray-300 hover:text-[#B48A5C]" title="Lihat Profil GitHub">
-                        <i data-lucide="github" class="w-10 h-10"></i>
+                        <i class="fab fa-github"></i>
                     </a>
                 </div>
             </div>
