--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 <h2 class="text-3xl font-bold text-white" data-lang-key="contactTitle">Hubungi Saya</h2>
                 <div class="w-24 h-px bg-gray-600 mx-auto mt-4 mb-6"></div>
                 <p class="text-gray-300 mt-4 max-w-xl mx-auto" data-lang-key="contactSubtitle">
-                    Saya terbuka untuk diskusi, peluang kerja, atau sekadar bertukar pikiran.
+                    Saya selalu menyambut baik koneksi baru, peluang kerja, serta kolaborasi yang bermanfaat.
                 </p>
                 <div class="mt-12 flex justify-center gap-8 text-3xl">
                     <a href="#" id="email-link" class="social-icon text-gray-300 hover:text-[#B48A5C]" title="Email">
@@ -801,3 +801,4 @@
 
 </body>
 </html>
+
