--- a/index.html
+++ b/index.html
@@ -605,12 +605,12 @@
                 certCatNetwork: "Jaringan & Keamanan (Cisco)",
                 certCatDev: "Pengembangan Diri & Pelatihan",
                 contactTitle: "Hubungi Saya",
-                contactSubtitle: "Saya terbuka untuk diskusi, peluang kerja, atau sekadar bertukar pikiran.",
+                contactSubtitle: "Saya selalu menyambut baik koneksi baru, peluang kerja, serta kolaborasi yang bermanfaat.",
                 footerText: "Dibuat dengan semangat.",
                 emailModalTitle: "Alamat Email Saya",
                 emailModalSubtitle: "Silakan salin alamat email di bawah ini.",
                 modalCopy: "Salin Teks",
-                modalClose: "Tutup"
+                modalClose: "Tutup" 
             },
             en: {
                 navAbout: "About Me",
@@ -642,7 +642,7 @@
                 certCatNetwork: "Networking & Security (Cisco)",
                 certCatDev: "Self-Development & Training",
                 contactTitle: "Contact Me",
-                contactSubtitle: "I'm open for discussions, job opportunities, or just to exchange ideas.",
+                contactSubtitle: "I am open to building new connections, exploring career opportunities, and engaging in meaningful collaborations.",
                 footerText: "Made with passion.",
                 emailModalTitle: "My Email Address",
                 emailModalSubtitle: "Please copy the email address below.",
@@ -801,4 +801,5 @@
 
 </body>
 </html>
+
 
