--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 <h2 class="text-3xl font-bold text-white text-center mb-16" data-lang-key="certificatesTitle">Sertifikasi & Pelatihan</h2>
         
                 <h3 class="text-2xl font-semibold text-white text-center mb-8">Pengalaman Profesional</h3>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 justify-center">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                     <div class="animated-card certificate-card card-bg rounded-lg overflow-hidden shadow-lg transform hover:-translate-y-2 transition-transform duration-300 group border flex flex-col cursor-pointer"
                          data-img-src="https://i.imgur.com/wZ7owwo.png"
                          data-doc-url="https://drive.google.com/file/d/1Y3VW0xUN9dW-vbJ5zU-x-F3nCiNBaIX0/view?usp=sharing">
@@ -413,7 +413,7 @@
                     </div>
                 </div>
         
-                <h3 class="text-2xl font-semibold text-white text-center mt-20 mb-8">Sertifikasi Inti (Jaringan & Keamanan)</h3>
+                <h3 class="text-2xl font-semibold text-white text-center mt-20 mb-8">Sertifikasi Inti</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                     <div class="animated-card certificate-card card-bg rounded-lg overflow-hidden shadow-lg transform hover:-translate-y-2 transition-transform duration-300 group border flex flex-col cursor-pointer"
                          data-img-src="https://i.imgur.com/ltwjESR.png"
@@ -423,7 +423,7 @@
                         </div>
                         <div class="p-4 flex flex-col flex-grow">
                             <h3 class="text-lg font-bold text-white mb-1 group-hover:text-[#B48A5C] transition-colors cert-title">CCNA Security</h3>
-                            <p class="text-sm text-gray-300 mt-auto">Cisco Networking Academy (Sep 2022)</p>
+                            <p class="text-sm text-gray-300 mt-auto">Cisco Networking Academy (2022)</p>
                         </div>
                     </div>
                     <div class="animated-card certificate-card card-bg rounded-lg overflow-hidden shadow-lg transform hover:-translate-y-2 transition-transform duration-300 group border flex flex-col cursor-pointer"
@@ -456,7 +456,7 @@
                         </div>
                         <div class="p-4 flex flex-col flex-grow">
                             <h3 class="text-lg font-bold text-white mb-1 group-hover:text-[#B48A5C] transition-colors cert-title">IT Essentials</h3>
-                            <p class="text-sm text-gray-300 mt-auto">Cisco Networking Academy (Aug 2020)</p>
+                            <p class="text-sm text-gray-300 mt-auto">Cisco Networking Academy (2020)</p>
                         </div>
                     </div>
                 </div>
@@ -471,7 +471,7 @@
                         </div>
                         <div class="p-4 flex flex-col flex-grow">
                             <h3 class="text-lg font-bold text-white mb-1 group-hover:text-[#B48A5C] transition-colors cert-title">Literasi Digital</h3>
-                            <p class="text-sm text-gray-300 mt-auto">Kemkominfo (Apr 2023)</p>
+                            <p class="text-sm text-gray-300 mt-auto">Kemkominfo (2023)</p>
                         </div>
                     </div>
                     <div class="animated-card certificate-card card-bg rounded-lg overflow-hidden shadow-lg transform hover:-translate-y-2 transition-transform duration-300 group border flex flex-col cursor-pointer"
@@ -482,7 +482,7 @@
                         </div>
                         <div class="p-4 flex flex-col flex-grow">
                             <h3 class="text-lg font-bold text-white mb-1 group-hover:text-[#B48A5C] transition-colors cert-title">Seminar Cyber Security</h3>
-                            <p class="text-sm text-gray-300 mt-auto">HIMATEKNO FTTI UNJAYA (Mar 2023)</p>
+                            <p class="text-sm text-gray-300 mt-auto">HIMATEKNO FTTI UNJAYA (2023)</p>
                         </div>
                     </div>
                     <div class="animated-card certificate-card card-bg rounded-lg overflow-hidden shadow-lg transform hover:-translate-y-2 transition-transform duration-300 group border flex flex-col cursor-pointer"
@@ -493,7 +493,7 @@
                         </div>
                         <div class="p-4 flex flex-col flex-grow">
                             <h3 class="text-lg font-bold text-white mb-1 group-hover:text-[#B48A5C] transition-colors cert-title">Webinar Pengolahan Data</h3>
-                            <p class="text-sm text-gray-300 mt-auto">XREI Institute (Mar 2023)</p>
+                            <p class="text-sm text-gray-300 mt-auto">XREI Institute (2023)</p>
                         </div>
                     </div>
                     <div class="animated-card certificate-card card-bg rounded-lg overflow-hidden shadow-lg transform hover:-translate-y-2 transition-transform duration-300 group border flex flex-col cursor-pointer"
@@ -504,7 +504,7 @@
                         </div>
                         <div class="p-4 flex flex-col flex-grow">
                             <h3 class="text-lg font-bold text-white mb-1 group-hover:text-[#B48A5C] transition-colors cert-title">Fundamental Python</h3>
-                            <p class="text-sm text-gray-300 mt-auto">Progate (Sep 2021)</p>
+                            <p class="text-sm text-gray-300 mt-auto">Progate (2021)</p>
                         </div>
                     </div>
                 </div>
