--- a/index.html
+++ b/index.html
@@ -409,8 +409,9 @@
 
     <!-- Menu Overlay -->
     <div id="menu-overlay" class="fixed top-0 right-0 h-full w-full md:w-1/2 lg:w-1/3 bg-[#2B2E31] text-white p-16 z-40 transform translate-x-full" style="transition: transform 0.8s cubic-bezier(0.23, 1, 0.32, 1);">
-        <div id="close-menu-button" class="absolute top-8 right-8 cursor-pointer text-white hover:text-primary-color transition-colors">
-            <i data-lucide="x" class="w-10 h-10"></i>
+        <div id="close-menu-button" class="absolute top-8 right-8 cursor-pointer text-white hover:text-primary-color transition-colors flex items-center gap-2">
+            <span class="text-xl font-bold tracking-widest">CLOSE</span>
+            <i data-lucide="x" class="w-8 h-8"></i>
         </div>
         <nav class="h-full flex flex-col justify-center">
             <div class="flex flex-col gap-6">
@@ -554,7 +555,14 @@
             }
             
             // --- EVENT LISTENERS ---
-            menuButton.addEventListener('click', () => menuOverlay.classList.remove('translate-x-full'));
+            menuButton.addEventListener('click', () => {
+                if (menuOverlay.classList.contains('translate-x-full')) {
+                    menuOverlay.classList.remove('translate-x-full');
+                    lucide.createIcons();
+                } else {
+                    menuOverlay.classList.add('translate-x-full');
+                }
+            });
             closeMenuButton.addEventListener('click', () => menuOverlay.classList.add('translate-x-full'));
 
             navLinks.forEach(link => {
