--- a/index.html
+++ b/index.html
@@ -620,6 +620,9 @@
                 <a href="https://wa.me/6287832165306" target="_blank" rel="noopener noreferrer" class="classic-button">
                     <i class="fa-brands fa-whatsapp mr-2"></i> WhatsApp
                 </a>
+                <a href="https://github.com/AffineCipher-0?tab=repositories" target="_blank" rel="noopener noreferrer" class="classic-button">
+                    <i class="fa-solid fa-code-branch mr-2"></i> Lihat Repositori
+                </a>
             </div>
             
             <div>
