--- a/index.html
+++ b/index.html
@@ -620,12 +620,18 @@
                 <a href="https://wa.me/6287832165306" target="_blank" rel="noopener noreferrer" class="classic-button">
                     <i class="fa-brands fa-whatsapp mr-2"></i> WhatsApp
                 </a>
+            </div>
+            
+            <div class="mt-8">
+                <p class="max-w-xl mx-auto mb-4">
+                    Jika ingin melihat pengembangan atau proyek lanjutan ini, silakan kunjungi repositori GitHub saya.
+                </p>
                 <a href="https://github.com/AffineCipher-0?tab=repositories" target="_blank" rel="noopener noreferrer" class="classic-button">
                     <i class="fa-solid fa-code-branch mr-2"></i> Lihat Repositori
                 </a>
             </div>
-            
-            <div>
+
+            <div class="mt-8">
                 <p class="max-w-xl mx-auto mb-4">
                     Seluruh catatan perjalanan akademik dan profesional tersaji dalam Daftar Riwayat Hidup yang dapat diunduh pada tautan berikut.
                 </p>
